<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackground">

    <ScrollView
        android:id="@+id/scrollContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation"
        android:layout_alignParentTop="true"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?attr/colorBackground">

            <!-- Thanh tiêu đề -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFEBEE"
                android:padding="16dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/ivClose"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@android:drawable/ic_menu_close_clear_cancel"
                    app:tint="#666666"
                    android:contentDescription="Close"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_title"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:gravity="center"/>
            </LinearLayout>

            <!-- Thông tin người dùng hoặc nút đăng nhập -->
            <LinearLayout
                android:id="@+id/userInfoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:background="?attr/colorBackground"
                android:layout_marginBottom="8dp"
                android:visibility="gone">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="?attr/colorBackground">

                    <!--<ImageView
                        android:id="@+id/ivAvatar"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="16dp"
                        android:src="@android:drawable/ic_dialog_info" />-->

                    <TextView
                        android:id="@+id/tvGroupName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/group_name_default"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="#666666"
                        />

                    <TextView
                        android:id="@+id/tvEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_default"
                        android:textSize="14sp"
                        android:textColor="#666666"/>
                </LinearLayout>
            </LinearLayout>

            <!-- Nút Đăng nhập / Đăng ký -->
            <Button
                android:id="@+id/btnLoginRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/login_register_button"
                android:textColor="#FFFFFF"
                android:backgroundTint="#42A5F5"
                android:padding="12dp"
                android:visibility="visible" />

            <!-- Thông báo lỗi (nếu có) -->
            <TextView
                android:id="@+id/tvError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:textColor="#FF0000"
                android:textSize="12sp"
                android:visibility="gone"/>

            <!-- Danh sách tùy chọn -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorBackground"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tvRename"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/rounded_bg"
                    android:drawableStart="@android:drawable/ic_menu_edit"
                    android:drawablePadding="16dp"
                    android:padding="8dp"
                    android:text="@string/rename_option"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvBackup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/rounded_bg"
                    android:drawableStart="@android:drawable/ic_menu_upload"
                    android:drawablePadding="16dp"
                    android:padding="8dp"
                    android:text="@string/backup_option"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/rounded_bg"
                    android:drawableStart="@android:drawable/ic_menu_help"
                    android:drawablePadding="16dp"
                    android:padding="8dp"
                    android:text="@string/language_option"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/rounded_bg"
                    android:drawableStart="@android:drawable/ic_menu_view"
                    android:drawablePadding="16dp"
                    android:padding="8dp"
                    android:text="@string/theme_option"
                    android:textSize="18sp" />

                <!--<TextView
                    android:id="@+id/tvNewFeatures"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/rounded_bg"
                    android:drawableStart="@android:drawable/ic_menu_info_details"
                    android:drawablePadding="16dp"
                    android:padding="8dp"
                    android:text="@string/new_features_option"
                    android:textSize="18sp" />-->

                <TextView
                    android:id="@+id/tvFeedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/rounded_bg"
                    android:drawableStart="@android:drawable/ic_menu_send"
                    android:drawablePadding="16dp"
                    android:padding="8dp"
                    android:text="@string/feedback_option"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvInviteFriends"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/rounded_bg"
                    android:drawableStart="@android:drawable/ic_menu_share"
                    android:drawablePadding="16dp"
                    android:padding="8dp"
                    android:text="@string/invite_friends_option"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvGuide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/rounded_bg"
                    android:drawableStart="@android:drawable/ic_menu_help"
                    android:drawablePadding="16dp"
                    android:padding="8dp"
                    android:text="@string/guide_option"
                    android:textSize="18sp" />

                <!--<TextView
                    android:id="@+id/tvReportBug"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/rounded_bg"
                    android:drawableStart="@android:drawable/ic_menu_report_image"
                    android:drawablePadding="16dp"
                    android:padding="8dp"
                    android:text="@string/report_bug_option"
                    android:textSize="18sp" />-->

                <TextView
                    android:id="@+id/tvLogout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@android:drawable/ic_lock_power_off"
                    android:drawablePadding="16dp"
                    android:padding="10dp"
                    android:text="@string/logout_option"
                    android:textSize="18sp"
                    android:visibility="gone" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/version_label"
                android:textColor="#666666"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorBackground"
        app:menu="@menu/bottom_nav_menu"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>