<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/eventTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_date_example"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/eventName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/event_name_example"
            android:textAlignment="center"
            android:textColor="#D31717"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/countdownText_general"
            app:layout_constraintWidth_percent="0.4"
            tools:layout_editor_absoluteX="176dp" />

        <TextView
            android:id="@+id/countdownText_general"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/event_group_example"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/eventTime"
            app:layout_constraintEnd_toStartOf="@id/eventName"
            android:layout_marginTop="8dp"
            app:layout_constraintWidth_percent="0.5"/>

        <TextView
            android:id="@+id/countdownText_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_countdown_example"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@id/countdownText_general"
            app:layout_constraintTop_toBottomOf="@id/countdownText_general"
            android:layout_marginTop="4dp" />

        <ImageButton
            android:id="@+id/eventMenuBtn"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/more_vert"
            app:tint="@android:color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
